@@ -1,3 +1,6 @@
+2024-10-17 Konstantin Kushnir <chpock@gmail.com>
+	* Use the compsize / uncompsize keys in pages info
+
 2024-10-16 Konstantin Kushnir <chpock@gmail.com>
 	* Add support for -metadata for VFS root attributes
 	* Add support for -pages for VFS root attributes
